--- a/css/main.css
+++ b/css/main.css
@@ -1,85 +1,173 @@
-/* Shyamal KAKADIA STUDENT ID: 8940119*/
-/* Part 1 */
-body {
-    font: normal normal normal 12px/1.5 Verdana, Arial, Helvetica, sans-serif;
-    height:100vh;
-    width: 100%;
-    max-width: 1400px;
-}
-
-/* Part 2*/
-header {
-    border: 3px solid black;
-    border-radius: 15px;
-}
-
-
-h1, h2 {
-    color: #b24b07;
-    font-variant: small-caps;
-}
-
-footer p {
-    font-size: 14px;
-    color: #666;
-}
-
-/* Part 3*/
-
-main {
-    float:left;
-    width: 920px;
-    height: 140vh;
-}
-
-aside {
-    float: left;
-    width: 250px;
-    height: 120vh;
-    margin: 15px;
-    padding-left: 200px;
+/*Home Page*/
+body{ 
+    width:100%;
+    margin: 0.3rem auto; 
+    padding: 0.3rem; 
+    font: normal normal normal 20px/30px  sans-serif; 
+    display: flex;
+    flex-direction: column;
 
 }
 
-
-footer{border: 3px solid black;
-    border-radius: 15px;
-    clear:both;
+header, footer{ 
+    border: 5px solid orange; 
+    border-radius:30px; 
+    padding: 0.6rem;  
+    margin: 0.6rem;
+    background-image: linear-gradient(to left, red,orange,yellow,green,blue,indigo,violet);
+}
+h1{ 
+    color:black; 
+    font-variant:  small-caps; 
+}
+h2{  
+    color:orange; 
+    font-variant:  small-caps;
 }
 
-.structural{
-    margin:15px;
-    padding: 10px;
- }
-
-
-/* Part 4 */
-.mainimg {
-    border: 2px solid #333;
+section
+{
+  display:flex;
+  flex-direction: row;
+  flex: 4 8%;
+  align-items: stretch;
+  justify-content: space-between;
 }
 
-figcaption {
-    font-weight: bold;
-    font-variant: small-caps;
+main{ 
+    width: 65%; 
+    padding: 0.6rem; 
+    margin: 0.6rem; 
+    flex:2 1 65%;
 }
 
-q {
-    font-family: cursive;
-    font-style: italic;
-    font-size: 18px;
+figcaption{       
+     
+    font-style: bold;  
+    font-variant:  small-caps; 
 }
 
-/* Part 5*/
-ul li {
+aside{
+    background: aqua url("../images/background.jpeg") left top / cover;
+    background-size: cover;
+    width: 30%;  
+    height:300px;
+    padding: 0.3rem;  
+    margin: 0.3rem; 
+    flex:1 2 30%; 
+}
+aside ul{  
     list-style-type: none;
-    line-height: 1.5;
+}
+aside ul a{  
+    text-decoration: none;   
+    color:green;  
+}
+aside ul a:hover{  
+    color: orange;  
+}
+aside ul li{  
+    line-height: 2.5rem; 
 }
 
-ul > li > a {
-    text-decoration: none;
-    color: #0099cc;
+footer p{ 
+    font-size: smaller; 
+    color: black;
+}
+figure{
+    width : 100%;
 }
 
-ul > li > a:hover {
-    color: #ff6600;
+nav{ 
+    margin: 10px; 
+    border: 5px solid orange; 
+    border-radius:30px; 
+    padding: 1.2rem 0; 
+    text-align: center; 
+}
+
+nav a{ 
+    font-size: 1.5em; 
+    font-weight: bold; 
+    color: green;
+    text-decoration: none; 
+    padding: 0 2rem; 
+}
+
+nav ul{ 
+    list-style-type: none; 
+    padding: 0; 
+    margin: 0; 
+}
+
+nav>ul>li{ 
+    display: inline-block; 
+    position: relative; 
+}
+nav ul li ul { 
+    display: none; 
+}
+nav ul li:hover ul{
+    display: block; 
+}
+
+nav ul li ul { 
+	width: 150%; 
+	position: absolute; 
+	z-index: 999; 
+	text-align: left; 
+	background-color: green; 
+    box-shadow: 0 0 5px green; 
+}
+
+nav ul li ul li a{ 
+    color: white; 
+    padding: 0.6rem;
+    display: block; 
+}
+
+nav ul li ul li:hover a:hover{ 
+    color:green; 
+    background-color: white; 
+}
+
+nav ul li a:hover
+{
+    color:orange;
+}
+
+html{
+    font-size: 1rem;
+}
+
+@media(max-width: 600px)
+{
+  html{
+    font-size: 0.6rem;
+  }
+  img{
+    grid-template-columns:1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  
+}
+
+@media (max-width: 1200px)
+{
+  html{
+    font-size: 1rem;
+  }
+}
+
+@media (max-width:600px) {
+    aside{
+        background-image: url(../images/Sardar.jpg);
+    }
+}
+
+@media (max-width: 1200px)
+{
+  aside{
+    background-image: url(../images/background.jpeg);
+  }
 }
